2006-12-12  Akim Demaille  <demaille@gostai.com>

	Prefix (some of) the tokens
	The token "in" was mapped to IN which is used somewhere on
	Windows.  Rather than fighting against this, use names that
	are less dangerous by prefixing then with TOK_.
	More should be needed, but at least that fixes the portability
	issue for now.
	* src/parser/bison/ugrammar.y: here.
	Use concrete names rather than abstract token names.
	More propagation is needed.
	* src/parser/bison/utoken.l: Adjust.

2006-12-12  Akim Demaille  <akim.demaille@free.fr>

	Simplify some piece of crap
	I thought I had seen it all checking student code at EPITA...
	* src/uvariablename.cc, src/uvariablename.hh (hmi2): Don't
	make it a class member, since it's only used as a local variable.
	(getVariable): Simplify.

2006-12-12  Akim Demaille  <akim.demaille@free.fr>

	Simplify scanGroups
	* src/ucommand.cc: here, using variable aliases.
	It should be noted that the test suite does not seem to
	exercise this part.  Someone should write some tests for it.
	* src/uvariablename.cc: Reduce variable scope.

2006-12-12  Akim Demaille  <akim.demaille@free.fr>

	Sort tokens
	* src/parser/bison/utoken.l, src/parser/bison/ugrammar.y:
	Sort tokens.

2006-12-12  Akim Demaille  <akim.demaille@free.fr>

	UParser::result
	* src/parser/uparser.cc, src/parser/uparser.hh: Remove, unused.
	(IN): Remove this #undef coming out of the blue.

2006-12-12  Akim Demaille  <akim.demaille@free.fr>

	UParser::errorMessage
	* src/parser/uparser.cc, src/parser/uparser.hh,
	* src/ucommand.cc, src/uconnection.cc,
	* src/uconnection.hh, src/uexpression.cc:
	(errorMessage): Move to...
	(UParser::errorMessage): here.
	(UParser::process): Simplify.
	Don't use new when there is no reason to.
	Remove initialization perfomed both by process and its callers.
	Using "private" might help in the future...
	Introduce variable shortcuts to improve the readability.

2006-12-08  Razik Yousfi  <yousfi@gostai.com>

	Remove dead code.